<resources>
    <string name="app_name">Paparazzi</string>
    <string name="activityLogin_continue">Next</string>
    <string name="activityConfirmPhone_resent">Did not get the code</string>
    <string name="activityConfirmPhone_confirmcode">Enter code here</string>
    <string name="activityInfo_nickname">User name</string>
    <string name="activitySetting_mail">E-mail</string>
    <string name="activityInfo_term">"By clicking the registration button, you confirm that you are 18 years old or older and agree that you have read the "</string>
    <string name="fragmentGames_search">search</string>
    <string name="fragmentGames_location">Location services disable</string>
    <string name="fragmentGames_refresh">Reload</string>
    <string name="activityGameInfo_tasks">mission`s</string>
    <string name="activityRating_participates">paparazzi</string>
    <string name="adapterGames_participates">paparazzi</string>
    <string name="adapterGames_tasks">mission`s</string>
    <string name="adapterFeed_task">Mission</string>
    <string name="activityMyGames_findgames">Find games</string>
    <string name="activityMyGames_dontparticipate">No games history yet</string>
    <string name="popupSettings_savePhoto">Save photo</string>
    <string name="activityReport_report">Report</string>
    <string name="popupSettings_badContent">Inappropriate content</string>
    <string name="popupSettings_badTask">Far from the mission</string>
    <string name="popupSettings_other">Help us understand what\'s happening</string>
    <string name="activityMyWins_myWins">Winnings</string>
    <string name="fragmentProfile_current">Current</string>
    <string name="fragmentProfile_future">Future</string>
    <string name="activityMyWins_dontWin">No winnings yet. But please dont`t give up</string>
    <string name="activityMyWins_sent">Withdrawal money</string>
    <string name="activityMyWins_mobile">On smartphone</string>
    <string name="activityMyWins_card">On credit card</string>
    <string name="activityMoney_card">Card number</string>
    <string name="popupImageChooser_photo">photo</string>
    <string name="popupImageChooser_camera">camera</string>
    <string name="popupImageChooser_phone">photo gallery</string>
    <string name="popupSettings_report">Complain about this post</string>
    <string name="activityMyGames_history">My history</string>
    <string name="activityNotMyGames_history">History</string>
    <string name="activityMyGames_doneTasks">Mission`s history</string>
    <string name="activityMyGames_games">Games</string>
    <string name="activitySetting_settings">Personal information</string>
    <string name="activitySetting_yourName">Your first name and surname</string>
    <string name="activitySetting_card">Your card number to receive winnings</string>
    <string name="activitySetting_aboutMyself">About</string>
    <string name="activitySetting_gender">Gender</string>
    <string name="activitySetting_birthday">Birthday</string>
    <string name="activitySetting_contactInformation">Contact info</string>
    <string name="activitySetting_country">Country</string>
    <string name="activitySetting_city">City</string>
    <string name="activitySetting_cardNumber">Card number</string>
    <string name="activitySetting_rate">Rate us</string>
    <string name="activitySetting_support">Support</string>
    <string name="activitySetting_exit">Sign out</string>
    <string name="popupGenderChooser_man">Male</string>
    <string name="popupGenderChooser_woman">Female</string>
    <string name="activityPlay_addHashtag">#your comment to the photo</string>
    <string name="activityRating_rating">Rating</string>
    <string name="activityRating_noRating">No photo have been taken yet. Be the first one</string>
    <string name="activityRating_findgames">Find games</string>
    <string name="activityRating_noActiveGames">You are not participating in any game now</string>
    <string name="adapterRating_place">place</string>
    <string name="txt_active">active</string>
    <string name="activityRating_reward">reward</string>
    <string name="activityReport_reportDescription">Help us understanding whats`s happening</string>
    <string name="activityUserProfile_userDontParticipate">User has no games yet</string>
    <string name="activityMoney_sentMoneyPhone">Transfer money to phone</string>
    <string name="activityMoney_sentMoneyCard">Transfer money to card</string>
    <string name="activityGameInfo_people">paparazzi</string>
    <string name="activityGameInfo_leave">exit the game</string>
    <string name="fragmentFeeds_noTasks">No one completed any missions yet</string>
    <string name="fragmentFeeds_findGames">Find games</string>
    <string name="activityGameInfo_join">play this game</string>
    <string name="activityMoney_sentMoneyOn">Transfer money to</string>
    <string name="activityMoney_confirm">Confirm</string>
    <string name="toast_enterNickname">Enter nickname</string>
    <string name="toast_wrongNumber">Invalid number</string>
    <string name="activityConfirmPhone_onYourNumber">Confirmation code was send to this number</string>
    <string name="adapterRating_emptyRating">No rating yet</string>
    <string name="popupSignout_signout">Sign out?</string>
    <string name="popupSignout_yes">Yes</string>
    <string name="popupSignout_no">No</string>
    <string name="error_timeIsOut">Time is out</string>
    <string name="popupGenderChooser_gender">Gender</string>
    <string name="adapterFeeds_saved">Photo has been saved to your library</string>
    <string name="adapterFeeds_reported">Complaint submited</string>
    <string name="toast_noInternet">No internet connection</string>
    <string name="activityConfirmPhone_wasSent">" "</string>
    <string name="activityReport_push">Send</string>
    <string name="activityConfirmPhone_wrongCode">Wrong code</string>
    <string name="activityRatingHistory_ended">Completed</string>
    <string name="adapterRating_ended">Complited</string>
    <string name="adapterRating_moderation">moderation</string>
    <string name="activityWin_win">You are winner</string>
    <string name="activityWin_later">Later</string>
    <string name="activitySetting_rules">Rules</string>
    <string name="activityMoney_success">Your request for money has been sent</string>
    <string name="layoutMywins_moderation">moderation</string>
    <string name="activityModeration_moderation">Moderation</string>
    <string name="activityModeration_moved">You moved</string>
    <string name="activityModeration_from">from</string>
    <string name="activityModeration_to">to</string>
    <string name="activityModeration_place">place</string>
    <string name="activityModeration_next">Continue</string>
    <string name="activityWin_first">1st place</string>
    <string name="activityWin_second">2nd place</string>
    <string name="activityWin_third">3rd place</string>
    <string name="activitySetting_wrongcard">Wrong email format</string>
    <string name="phoneNumber">Phone number</string>
    <string name="fragmentGames_nogames">No games in your area yet</string>
    <string name="tutorial_welcome">Welcome to PAPARAZZI Games</string>
    <string name="tutorial_feedsType">Here you can see your mission\'s or completed mission\'s of all paparazzi</string>
    <string name="tutorial_money">You can transfer money to your mobile phone or credit card</string>
    <string name="activityEditinfo_badnickname">Username must contain at least 3 letters in English or digits</string>
    <string name="activityInfo_termLink">terms of service and privacy policy.</string>
    <string name="activityTutorial_welcome">Play</string>
    <string name="activityTutorial_subscribe">Be fast</string>
    <string name="activityTutorial_dotasks">Win</string>
    <string name="activityTutorial_befast">Transfer your wininngs</string>
    <string name="activityTutorial_win">Create games</string>
    <string name="activityTutorial_type">Set location for your game</string>
    <string name="activityTurorial_signin">Manage</string>
    <string name="activityMyWins_onmoderate">At the moment, there is a moderation. Please wait.</string>
    <string name="tutorial_gamelist">This is a list of all available games in your area. Click on a game to view it\'s description</string>
    <string name="tutorial_subscribe">Each game includes a description, time, date, place of the game, the number of tasks, the number of wins and the number of participants. Scroll down and click the Participate button to subscribe to the game</string>
    <string name="tutorial_feedsRating">The rating shows the TOP-3 rating and your current place</string>
    <string name="tutorial_feeds">Here you can see all completed mission\'s</string>
    <string name="tutorial_share">Do not forget to share the game with your friends</string>
    <string name="tutorial_next">continue</string>
    <string name="activityGameInfo_errorpush">To be able to participate in the games you need to enable the display of notifications</string>
    <string name="tutorial_history">History keeps all your past games</string>
    <string name="tutorial_mygames">Your profile will display all the games you subscribed to</string>
    <string name="error_cannotReachServer">Connection is lost</string>
    <string name="activityUserProfile_notsupported">The game is not supported in your area</string>
    <string name="popupUnsubscribe_unsubscribe">Are you sure?</string>
    <string name="push_win">Congratulations, you one of the winners!</string>
    <string name="push_endgame">Game over, wait for results</string>
    <string name="push_moderate">Review is over. Check the results</string>
    <string name="push_newgame">New game created in your area. Sign up now - good luck</string>
    <string name="x">man</string>
    <string name="error_secondPost">Second post</string>
    <string name="error_dontUpload">File don\'t upload</string>
    <string name="error_gameEnded">Game ended</string>
    <string name="activityCreateAuditory_enter">Select region</string>
    <string name="activityCreateTask_fillAll">Fill all the tasks</string>
    <string name="popup_no">No</string>
    <string name="popup_yes">Yes</string>
    <string name="activityCreate_chooseRadius">" Select radius"</string>
    <string name="actibityCreateGame_gameSend">Game is moderating</string>
    <string name="activityDate_from">from</string>
    <string name="R.string.activityMoney_sentMoneyPaypal">Transfer money to paypal</string>
    <string name="activityCreateGame_delete">Delete game?</string>
    <string name="activityCreateGame_fillInfo">" Fill all information"</string>
    <string name="activityCreateGame_save">" Save and exit?"</string>
    <string name="activityCreate_addtask">Add task</string>
    <string name="activityCreate_auditory">Location</string>
    <string name="activityCreate_category">Category</string>
    <string name="activityCreate_create">Create a game</string>
    <string name="activityCreate_description">Description</string>
    <string name="activityCreate_empty">"You have not created any games yet"</string>
    <string name="activityCreate_howCreate">How to create a game</string>
    <string name="activityCreate_info">" The date and time can be entered after the game is moderated and paid"</string>
    <string name="activityCreate_moderation">Submit for moderation</string>
    <string name="activityCreate_mygames">My games</string>
    <string name="activityCreate_name">" Name of the game"</string>
    <string name="activityCreate_pay">pay</string>
    <string name="activityCreate_sum">Amount</string>
    <string name="activityCreate_task">Tasks</string>
    <string name="activityCreate_wrongDescription">Invalid description</string>
    <string name="activityCreate_wrongName">Invalid name</string>
    <string name="activityCreate_wrongPhoto">" Invalid image"</string>
    <string name="activityDate_date">date and time</string>
</resources>