<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/bggradient"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:paddingStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/popupSettings_savePhoto"
            android:textSize="12sp"
            android:textColor="#57606F"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="@string/popupSettings_report"
            android:textSize="12sp"
            android:paddingStart="20dp"
            android:textColor="#57606F"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:paddingStart="32dp"
            android:text="@string/popupSettings_badContent"
            android:textColor="#57606F"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:paddingStart="32dp"
            android:text="@string/popupSettings_badTask"
            android:fontFamily="@font/roboto_regular"
            android:textColor="#57606F"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:paddingStart="32dp"
            android:text="@string/popupSettings_other"
            android:fontFamily="@font/roboto_regular"
            android:textColor="#57606F"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="RtlSymmetry" />



    </android.support.constraint.ConstraintLayout>



</LinearLayout>