<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="126dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bggradient"
    android:orientation="vertical">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_frame"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="38dp"
            android:layout_height="18dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dialog_left"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="38dp"
            android:layout_height="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dialog_right"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:text="@string/popupGenderChooser_gender"
            android:fontFamily="@font/roboto_bold"
            android:textColor="#586575"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/bggradient"
            android:gravity="center_vertical"
            android:text="@string/popupGenderChooser_man"
            android:textAlignment="center"
            android:textColor="#586575"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/bggradient"
            android:gravity="center_vertical"
            android:text="@string/popupGenderChooser_woman"
            android:textAlignment="center"
            android:textColor="#586575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </android.support.constraint.ConstraintLayout>



</LinearLayout>