<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    tools:context="com.game.xogame.views.game.ReportActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/setting_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginEnd="55dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/activityReport_report"
            android:textAlignment="center"
            android:textColor="#2F3542"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bggradient"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/profile_line"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/activityReport_reportDescription"
            android:textAlignment="center"
            android:textColor="#586575"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="44dp"
            android:src="#80586575"
            tools:ignore="ContentDescription" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">


        <EditText
            android:id="@+id/editText9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="10"
            android:textColor="#586575"
            android:textSize="14dp"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/registration_button_view"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/activityReport_push"
            android:textColor="#ffffff"
            android:textSize="16dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
