<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    tools:context="com.game.xogame.views.profile.MyGamesActivity">


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="13dp"
                android:src="@drawable/setting_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="42dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/activityMyGames_history"
                android:textAlignment="center"
                android:textColor="#2F3542"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/profile_line"
            tools:ignore="ContentDescription"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bggradient"

            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activityMyGames_games"
                    android:textAlignment="center"
                    android:textColor="#586575"
                    android:textSize="12sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activityMyGames_doneTasks"
                    android:textAlignment="center"
                    android:textColor="#586575"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="#ABB2BA"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="#ABB2BA"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="13dp"
                android:src="#80586575"
                tools:ignore="ContentDescription"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TableLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <ListView
                android:id="@+id/gamelist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#00000000"
                android:dividerHeight="15dp"
                android:clipToPadding="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/bggradient"
                tools:ignore="NestedScrolling" />

        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="159dp"
        android:layout_height="159dp"
        android:id="@+id/targetView"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView

            android:layout_width="159dp"
            android:layout_height="159dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="activityindicator.json"
            app:lottie_imageAssetsFolder="airbnb/"
            app:lottie_loop="true" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/empty"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/activityMyGames_dontparticipate"
            android:textAlignment="center"
            android:textColor="#80586575"
            android:textSize="16sp" />

        <Button
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/registration_button_view"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/activityMyGames_findgames"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
